# kg-diag

./: Cargo.toml  README.md
kg-diag/: Cargo.toml  README.md
kg-diag-derive/: Cargo.toml  README.md
kg-diag-derive/src/: lib.rs
kg-diag-derive/tests/: tests.rs
kg-diag-test/: Cargo.toml
kg-diag-test/tests/: tests.rs
kg-diag/benches/: reader_dispatch.rs
kg-diag/examples/: basic.rs
kg-diag/src/: detail.rs  diag.rs  io.rs  lib.rs  multi.rs  stacktrace.rs
kg-diag/src/io/: error.rs  fs.rs  mod.rs  num.rs  reader.rs
kg-diag/src/parse/: error.rs  mod.rs  num.rs
kg-diag/tests/: tests.rs
