[package]
name = "kg-diag-derive"
version = "0.2.3"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Macro implementation for #[derive(Detail)].
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-diag"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
kg-diag = { version = "0.2.7", path = "../kg-diag" }
proc-macro2 = { version = "0.4.30", features = ["nightly"] }
quote = "0.6.13"
syn = { version = "0.15.42", features = ["full"] }
synstructure = "0.11.0"

[dev-dependencies]
kg-display-derive = "0.1.1"
