[package]
name = "kg-diag-derive"
version = "0.4.0"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Macro implementation for #[derive(Detail)].
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-diag"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
kg-diag = { version = "0.4.0", path = "../kg-diag" }
proc-macro2 = { version = "1.0.24", features = ["nightly"] }
quote = "1.0.7"
syn = { version = "1.0.42", features = ["full"] }
synstructure = "0.12.4"

[dev-dependencies]
kg-display-derive = "0.1.1"
