[package]
name = "kg-diag-test"
version = "0.1.0"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Tests excluded into separate crate due to circular dependency
"""
repository = "https://github.com/Kodegenix/kg-diag"
workspace = ".."
publish = false

[dependencies]
kg-display-derive = "0.1"
backtrace = "0.3"

[dev-dependencies]
kg-io = "0.1"

