[package]
name = "kg-diag-test"
version = "0.1.0"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Tests excluded into separate crate due to circular dependency
"""
repository = "https://github.com/Kodegenix/kg-diag"
workspace = ".."
publish = false
edition = "2018"

[dev-dependencies]
kg-diag = "0.1"
kg-io = "0.1"

[replace]
"kg-diag:0.1.0" = { path = "../kg-diag" }
