[package]
name = "kg-diag"
version = "0.2.3"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Error/diagnostic management. I/O routines for reading UTF-8 textual data with position tracking.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-diag"
workspace = ".."
edition = "2018"

[dependencies]
kg-display-derive = "0.1.1"
backtrace = "0.3.34"
serde = "1.0.98"
serde_derive = "1.0.98"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tempfile = "3.1.0"
